Fix navbar - single logo to prevent ACTIN link overflow

--- a/css/style.css
+++ b/css/style.css
@@ -232,7 +232,7 @@ img {
 }
 
 .logo-img {
-  height: 55px;
+  height: 45px;
   width: auto;
   object-fit: contain;
   animation: logoFloat 3s ease-in-out infinite;
